--- a/src/app/components/Header/header.module.css
+++ b/src/app/components/Header/header.module.css
@@ -9,9 +9,17 @@
     letter-spacing: -0.9px;
 }
 
+.subtitle {
+    margin-top: -0.2rem;
+}
+
 .description {
     max-width: 32rem;
     word-spacing: 0rem;
+}
+
+.indice {
+    display: none;
 }
 
 .social {
@@ -43,8 +51,54 @@
     .title {
         font-size: 4.8rem;
     }
+}
 
-    .subtitle {
-        font-size: 2rem;
+@media(min-width: 64rem) {
+    .header {
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: calc(100vh - 12rem);
+    }
+
+    .indice {
+        display: block;
+        margin-top: 8rem;
+    }
+
+    .indice ul {
+        list-style-type: none;
+    }
+
+    .indice ul li {
+        display: flex;
+        gap: 2rem;
+        align-items: center;
+        margin-bottom: 1rem;
+        opacity: 0.4;
+        cursor: pointer;
+    }
+
+    .indice ul li p {
+        margin: 0;
+    }
+
+    .indice ul li span {
+        display: block;
+        height: 1px;
+        width: 4rem;
+        background-color: var(--text-clr);
+
+        transition: 0.3s;
+    }
+
+    .indice .active {
+        opacity: 1;
+    }
+
+    .indice .active span {
+        width: 7rem;
+        color: red;
     }
 }
