--- a/src/app/components/LigthPoint/ligthpoint.module.css
+++ b/src/app/components/LigthPoint/ligthpoint.module.css
@@ -7,7 +7,7 @@
     border: 1px;
     border-radius: 50%;
     background: radial-gradient(60rem circle,
-            rgba(29, 78, 216, 0.15),
+            var(--pointer),
             transparent 80%);
     z-index: -1;
 }
