--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,7 +61,7 @@ button:hover {
 }
 
 h1 {
-  font-size: 3.8rem;
+  font-size: 3.5rem;
   color: var(--yellow);
   font-weight: 600;
   letter-spacing: -0.9px;
@@ -70,7 +70,7 @@ h1 {
 h2,
 h3 {
   margin-top: 1rem;
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 500;
 }
 
@@ -85,6 +85,15 @@ h3 {
 }
 
 @media(min-width: 48rem) {
+  h1 {
+    font-size: 3.8rem;
+  }
+
+  h2,
+  h3 {
+    font-size: 2rem;
+  }
+
   body {
     padding: 7.4rem 2.4rem;
   }
