--- a/src/components/Proyects/proyects.module.css
+++ b/src/components/Proyects/proyects.module.css
@@ -46,14 +46,33 @@
     color: var(--yellow);
 }
 
-.card:hover svg {
+.card:hover .content svg {
     transform: translate(0.4rem, -0.4rem);
 }
 
-.card svg {
+.card .content svg {
     margin-left: 0.5rem;
     font-size: 1.2rem;
     transition: 0.1s;
+}
+
+.card .img_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card .img_container svg {
+    position: relative;
+    font-size: 2rem;
+    z-index: 10;
+    transition: 0.3s;
+}
+
+.card .img_container svg:hover {
+    transform: scale(1.1);
+    color: var(--yellow);
 }
 
 .card h4 {
