--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -12,36 +12,33 @@
 }
 
 .social {
-    width: fit-content;
-    margin-top: 3.4rem;
     display: flex;
     align-items: center;
     gap: 2.2rem;
+    width: fit-content;
+    margin-top: 3.4rem;
     padding-inline: 0.2rem;
 }
 
+.social {
+    font-size: var(--font-svg);
+    color: var(--text-color);
+    transition: 0.2s;
+}
+
 .social svg {
-    font-size: 2.2rem;
-    color: var(--ligth-grey);
     transition: 0.2s;
 }
 
 .social a:hover svg {
     transform: scale(1.2);
-    color: var(--yellow);
+    color: var(--highligth);
 }
 
 #mail_icon {
-    font-size: 2.6rem;
+    font-size: 2.9rem;
 }
 
-
-
-@media(min-width: 40rem) {
-    .title {
-        font-size: 4.8rem;
-    }
-}
 
 @media(min-width: 64rem) {
     .header {
@@ -57,14 +54,10 @@
         margin-top: 8rem;
     }
 
-    .indice ul {
-        list-style-type: none;
-    }
-
     .indice ul li {
         display: flex;
-        gap: 2rem;
         align-items: center;
+        gap: 2rem;
         margin-bottom: 1rem;
         opacity: 0.4;
         cursor: pointer;
@@ -75,14 +68,14 @@
     }
 
     .indice ul li:not(.active) p:hover {
-        color: var(--yellow);
+        color: var(--highligth);
     }
 
     .indice ul li span {
         display: block;
         height: 1px;
         width: 4rem;
-        background-color: var(--ligth-grey);
+        background-color: var(--text-color);
         transition: 0.3s;
     }
 
