--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,38 +78,18 @@ svg {
   font-size: var(--font-svg);
 }
 
-button {
-  font-family: inherit;
-  background-color: inherit;
-  color: inherit;
-  border: none;
-  font-size: var(--font-size-m);
-  word-spacing: 0.2rem;
-  color: var(--highligth);
-  opacity: 0.6;
-  cursor: pointer;
-  transition: 0.2s;
-}
-
-.buttons {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  column-gap: 1.6rem;
-}
-
 .buttons .button {
   display: flex;
   align-items: center;
   gap: 1rem;
   height: 3.5rem;
   width: fit-content;
-  font-size: var(--font-size-m);
+  font-size: 1.5rem;
   border: 1px solid var(--transparent);
   letter-spacing: 0.1rem;
   border-radius: 0.5rem;
-  padding: 0.4rem;
-  margin-top: 2rem;
+  padding: 1rem;
+  margin-top: 1rem;
   text-decoration: none;
   color: var(--text-color);
   transition: 0.2s;
@@ -118,6 +98,10 @@ button {
 
 .buttons .button:hover {
   color: var(--highligth);
+}
+
+.button svg {
+  font-size: 1.6rem;
 }
 
 button:hover {
