--- a/src/components/Projects/projects.module.css
+++ b/src/components/Projects/projects.module.css
@@ -22,6 +22,7 @@
 
 .card p {
     margin: 0;
+    font-size: 1.4rem;
     margin-top: 1rem;
     word-spacing: 0;
 }
@@ -29,7 +30,7 @@
 .card h3 {
     margin-top: 0;
     color: var(--text-color);
-    font-weight: 500;
+    margin-bottom: 0.25rem;
     line-height: 2rem;
     display: flex;
     align-items: center;
