--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,8 @@
 html {
     background: url("/wallpaper.png");
     background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
     background-color: var(--bg-color);
 
     color: var(--text-color);
